Fixed the broken imports from refactored packages

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -9,9 +9,9 @@
    "outputs": [],
    "source": [
     "from tomato.symbolic.symbtranalyzer import SymbTrAnalyzer\n",
-    "from symbtrextras.ScoreExtras import ScoreExtras\n",
+    "from symbtrextras.scoreextras import ScoreExtras\n",
     "import os\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)"
+    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n"
    ]
   },
   {
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.75 seconds to execute.\n",
+      "  The call took 9.60 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
       "  The call took 0.61 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
@@ -738,9 +738,9 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.53 seconds to execute.\n",
+      "  The call took 8.96 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.78 seconds to execute.\n",
+      "  The call took 0.62 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
       "  The call took 0.01 seconds to execute.\n"
      ]
