--- a/score_conversion_demo.ipynb
+++ b/score_conversion_demo.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "from tomato.symbolic.scoreconverter import ScoreConverter\n",
     "import pprint \n",
-    "import os"
+    "import os\n"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "svg_paper_size = 'junior-legal'  # The paper size of the svg output pages\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreConverter = ScoreConverter()"
+    "scoreConverter = ScoreConverter()\n"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "xml_output, ly_output, svg_output, txt_ly_mapping = scoreConverter.convert(\n",
     "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=work_mbid, \n",
     "    render_metadata=render_metadata, xml_out=xml_filename, ly_out=ly_filename, \n",
-    "    svg_out=svg_filename_template, svg_paper_size=svg_paper_size)"
+    "    svg_out=svg_filename_template, svg_paper_size=svg_paper_size)\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
     "# convert the LilyPond to svg\n",
     "svg = scoreConverter.lilypond_to_svg(\n",
     "    ly_str, svg_out=svg_filename_template, \n",
-    "    paper_size=svg_paper_size, ly_txt_mapping=ly_txt_mapping)"
+    "    paper_size=svg_paper_size, ly_txt_mapping=ly_txt_mapping)\n"
    ]
   }
  ],
