Updated symbtranalysis demo

--- a/demos/score_analysis_demo.ipynb
+++ b/demos/score_analysis_demo.ipynb
@@ -22,14 +22,13 @@
    },
    "outputs": [],
    "source": [
-    "# score filepaths\n",
-    "txt_filename = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
-    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt')\n",
-    "mu2_filename = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
-    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2')\n",
-    "\n",
-    "# only needed if the filename is modified from the SymbTr naming convention\n",
+    "# symbtr name, \n",
+    "# it is needed if the filename is modified from the SymbTr naming convention\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
+    "\n",
+    "# score filepaths\n",
+    "txt_filename = os.path.join(symbtr_name, symbtr_name + '.txt')\n",
+    "mu2_filename = os.path.join(symbtr_name, symbtr_name + '.mu2')\n",
     "\n",
     "# instantiate analyzer object\n",
     "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n"
@@ -54,11 +53,11 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.67 seconds to execute.\n",
+      "  The call took 27.86 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.64 seconds to execute.\n",
+      "  The call took 62.15 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.01 seconds to execute.\n"
+      "  The call took 0.03 seconds to execute.\n"
      ]
     }
    ],
@@ -738,11 +737,11 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.08 seconds to execute.\n",
+      "  The call took 25.29 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.61 seconds to execute.\n",
+      "  The call took 0.85 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.01 seconds to execute.\n"
+      "  The call took 0.04 seconds to execute.\n"
      ]
     }
    ],
@@ -782,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
