Set system-wide installed LilyPond to default Linux configuration

--- a/demos/score_conversion_demo.ipynb
+++ b/demos/score_conversion_demo.ipynb
@@ -6,11 +6,20 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automatic pdb calling has been turned ON\n"
+     ]
+    }
+   ],
    "source": [
     "from tomato.symbolic.scoreconverter import ScoreConverter\n",
     "import pprint \n",
-    "import os\n"
+    "import os\n",
+    "%pdb"
    ]
   },
   {
@@ -82,17 +91,17 @@
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
-    "xml_str = scoreConverter.txt_mu2_to_musicxml(\n",
+    "xml_file = scoreConverter.txt_mu2_to_musicxml(\n",
     "    txt_filename, mu2_filename, xml_out=xml_filename, symbtr_name=symbtr_name,\n",
     "    mbid=work_mbid)\n",
     "\n",
     "# convert the MusicXML to LilyPond\n",
-    "ly_str, ly_txt_mapping = scoreConverter.musicxml_to_lilypond(\n",
-    "    xml_str, ly_out=ly_filename, render_metadata=render_metadata)\n",
+    "ly_file, ly_txt_mapping = scoreConverter.musicxml_to_lilypond(\n",
+    "    xml_file, ly_out=ly_filename, render_metadata=render_metadata)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg = scoreConverter.lilypond_to_svg(\n",
-    "    ly_str, svg_out=svg_filename_template, \n",
+    "svg_files = scoreConverter.lilypond_to_svg(\n",
+    "    ly_file, svg_out=svg_filename_template, \n",
     "    paper_size=svg_paper_size, ly_txt_mapping=ly_txt_mapping)\n"
    ]
   }
@@ -113,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
