Updated the demo files

--- a/demos/score_conversion_demo.ipynb
+++ b/demos/score_conversion_demo.ipynb
@@ -6,20 +6,11 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Automatic pdb calling has been turned ON\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tomato.symbolic.scoreconverter import ScoreConverter\n",
     "import pprint \n",
-    "import os\n",
-    "%pdb"
+    "import os\n"
    ]
   },
   {
