Forced makam labels to lower case in the training model

--- a/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
+++ b/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
@@ -12,7 +12,8 @@
     "import json\n",
     "import os\n",
     "from morty.pitchdistribution import PitchDistribution\n",
-    "import pickle"
+    "import pickle\n",
+    "from fileoperations.slugify_tr import slugify_tr"
    ]
   },
   {
@@ -54,6 +55,9 @@
     "for j in training_files:\n",
     "    training_datum = json.load(open(j))\n",
     "    training_datum['feature'] = PitchDistribution.from_dict(training_datum['feature'])\n",
+    "    \n",
+    "    # make sure the training labels are slugified and lowercase\n",
+    "    training_datum['mode'] = slugify_tr(training_datum['mode']).lower()\n",
     "    \n",
     "    model.append(training_datum)\n",
     "\n",
