Clarified citations in the code header

--- a/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
+++ b/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
@@ -3,15 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from fileoperations.fileoperations import get_filenames_in_dir\n",
     "import json\n",
     "import os\n",
-    "from morty.pitchdistribution import PitchDistribution\n",
+    "from tomato.audio.pitchdistribution import PitchDistribution\n",
     "import pickle\n",
     "from fileoperations.slugify_tr import slugify_tr"
    ]
@@ -27,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get the training data with the best performing parameters\n",
@@ -45,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instantiate the model\n",
@@ -83,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11+"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
