--- a/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
+++ b/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "from tomato.audio.pitchdistribution import PitchDistribution\n",
     "import pickle\n",
-    "from fileoperations.slugify_tr import slugify_tr"
+    "from tomato.io import IO"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "    training_datum['feature'] = PitchDistribution.from_dict(training_datum['feature'])\n",
     "    \n",
     "    # make sure the training labels are slugified and lowercase\n",
-    "    training_datum['mode'] = slugify_tr(training_datum['mode']).lower()\n",
+    "    training_datum['mode'] = IO.slugify_tr(training_datum['mode']).lower()\n",
     "    \n",
     "    model.append(training_datum)\n",
     "\n",
