--- a/demos/score_analysis_demo.ipynb
+++ b/demos/score_analysis_demo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from tomato.symbolic.symbtranalyzer import SymbTrAnalyzer\n",
-    "from tomato.symbolic.symbtr.symbtrextras.scoreextras import ScoreExtras\n",
+    "from tomato.symbolic.symbtr.extras.score import Score as ScoreExtras\n",
     "import os\n",
     "from pprint import pprint\n"
    ]
