metadata.symbtr.musicbrainz makes a direct call to metadata.Recording instead of instantiation

--- a/demos/score_analysis_demo.ipynb
+++ b/demos/score_analysis_demo.ipynb
@@ -47,11 +47,11 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.56 seconds to execute.\n",
+      "  The call took 11.02 seconds to execute.\n",
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.85 seconds to execute.\n",
+      "  The call took 0.70 seconds to execute.\n",
       "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.30 seconds to execute.\n"
+      "  The call took 0.18 seconds to execute.\n"
      ]
     }
    ],
@@ -1496,13 +1496,7 @@
       "                                        0.15000000000000002,\n",
       "                                        0.15000000000000002,\n",
       "                                        0.30000000000000004,\n",
-      "                                        0.09999999999999998,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                        0.09999999999999998,\n",
       "                                        0.050000000000000044,\n",
       "                                        0.038461538461538436,\n",
       "                                        0.19999999999999996,\n",
@@ -1765,13 +1759,7 @@
       "                                        0.6,\n",
       "                                        0.08333333333333337,\n",
       "                                        0.36111111111111116,\n",
-      "                                        1.0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                        1.0,\n",
       "                                        0.08333333333333337,\n",
       "                                        0.36111111111111116,\n",
       "                                        1.0,\n",
@@ -2021,7 +2009,13 @@
       "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
-      "                                       1,\n",
+      "                                       1,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
@@ -2656,13 +2650,7 @@
       "               'lyrics': '',\n",
       "               'lyrics_similarities': [1,\n",
       "                                       1,\n",
-      "                                       1,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
@@ -2783,7 +2771,13 @@
       "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
-      "                                       1,\n",
+      "                                       1,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
@@ -3192,13 +3186,7 @@
       "                                        0.2142857142857143,\n",
       "                                        0.18604651162790697,\n",
       "                                        0.18604651162790697,\n",
-      "                                        0.37209302325581395,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                        0.37209302325581395,\n",
       "                                        0.18604651162790697,\n",
       "                                        0.18604651162790697,\n",
       "                                        0.37209302325581395,\n",
@@ -3601,7 +3589,13 @@
       "               'lyrics': '',\n",
       "               'lyrics_similarities': [1,\n",
       "                                       1,\n",
-      "                                       1,\n",
+      "                                       1,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                       1,\n",
       "                                       1,\n",
       "                                       1,\n",
@@ -4149,13 +4143,7 @@
       "                                        1.0,\n",
       "                                        0.33653846153846156,\n",
       "                                        1.0,\n",
-      "                                        0.4],\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                        0.4],\n",
       "               'melodic_structure': 'D2',\n",
       "               'name': 'INSTRUMENTAL_SEGMENT',\n",
       "               'sections': [{'lyrics_structure': 'INSTRUMENTAL',\n",
@@ -4301,11 +4289,18 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.64 seconds to execute.\n",
-      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.75 seconds to execute.\n",
-      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.20 seconds to execute.\n"
+      "  The call took 9.35 seconds to execute.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Work' has no attribute 'get_mbids'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-a97864e2a475>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Note 2: very rare but there can be more that one mbid returned. We are going to use\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#         the first work to get fetch the metadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mmbid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mbids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msymbtr_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Extract the (meta)data from the SymbTr scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Work' has no attribute 'get_mbids'"
      ]
     }
    ],
