Corrected the converter class names import in score_conversion_demo.ipynb

--- a/demos/score_conversion_demo.ipynb
+++ b/demos/score_conversion_demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomato.symbolic.scoreconverter import ScoreConverter\n",
+    "from tomato.symbolic.symbtrconverter import SymbTrConverter\n",
     "import pprint \n",
     "import os\n"
    ]
@@ -36,7 +36,7 @@
     "svg_paper_size = 'junior-legal'  # The paper size of the svg output pages\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreConverter = ScoreConverter()\n"
+    "symbTrConverter = SymbTrConverter()\n"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xml_output, ly_output, svg_output, txt_ly_mapping = scoreConverter.convert(\n",
+    "xml_output, ly_output, svg_output, txt_ly_mapping = symbTrConverter.convert(\n",
     "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=work_mbid, \n",
     "    render_metadata=render_metadata, xml_out=xml_filename, ly_out=ly_filename, \n",
     "    svg_out=svg_filename_template, svg_paper_size=svg_paper_size)\n"
@@ -74,16 +74,16 @@
    "source": [
     "# convert symbtr-txt file to MusicXML format. Use the metadata in the mu2 header as\n",
     "# complementary information\n",
-    "xml_file = scoreConverter.txt_mu2_to_musicxml(\n",
+    "xml_file = symbTrConverter.txt_mu2_to_musicxml(\n",
     "    txt_filename, mu2_filename, xml_out=xml_filename, symbtr_name=symbtr_name,\n",
     "    mbid=work_mbid)\n",
     "\n",
     "# convert the MusicXML to LilyPond\n",
-    "ly_file, ly_txt_mapping = scoreConverter.musicxml_to_lilypond(\n",
+    "ly_file, ly_txt_mapping = symbTrConverter.musicxml_to_lilypond(\n",
     "    xml_file, ly_out=ly_filename, render_metadata=render_metadata)\n",
     "\n",
     "# convert the LilyPond to svg\n",
-    "svg_files = scoreConverter.lilypond_to_svg(\n",
+    "svg_files = symbTrConverter.lilypond_to_svg(\n",
     "    ly_file, svg_out=svg_filename_template, \n",
     "    paper_size=svg_paper_size, ly_txt_mapping=ly_txt_mapping)\n"
    ]
@@ -98,14 +98,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
