Removed unused imports from symbtranalyzer.py

--- a/demos/score_analysis_demo.ipynb
+++ b/demos/score_analysis_demo.ipynb
@@ -48,7 +48,7 @@
      "text": [
       "Automatic pdb calling has been turned ON\n",
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.71 seconds to execute.\n"
+      "  The call took 8.74 seconds to execute.\n"
      ]
     }
    ],
@@ -90,8 +90,7 @@
       "                 'title': 'Uşşak Saz Semaisi'},\n",
       "                {'mbid': 'f970f1e0-0be9-4914-8302-709a0eac088e',\n",
       "                 'title': 'Uşşak Sazsemaisi'}],\n",
-      " 'scores': ['ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'],\n",
-      " 'symbtr': 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
+      " 'symbtr_name': 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
       " 'tonic': 'A4',\n",
       " 'url': 'http://musicbrainz.org/work/e7924b0d-c8a0-4b4a-b253-8eec898eac1e',\n",
       " 'usul': {'attribute_key': 'aksaksemai',\n",
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +125,7 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.93 seconds to execute.\n"
+      "  The call took 9.09 seconds to execute.\n"
      ]
     },
     {
@@ -150,8 +149,7 @@
       "\u001b[0m\u001b[0;32m----> 9 \u001b[0;31m\u001b[0mmbid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mbids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msymbtr_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m     10 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m     11 \u001b[0;31m\u001b[0;31m# Extract the (meta)data from the SymbTr scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "ipdb> q\n"
+      "\u001b[0m\n"
      ]
     }
    ],
