Fixed makam tonic estimation model loading error

--- a/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
+++ b/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from fileoperations.fileoperations import get_filenames_in_dir\n",
     "import json\n",
     "import os\n",
     "from tomato.audio.pitchdistribution import PitchDistribution\n",
@@ -25,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get the training data with the best performing parameters\n",
@@ -35,13 +38,15 @@
     "training_folder = os.path.join(experiment_folder, parameter_str)\n",
     "\n",
     "# get the relevant files storing the data points\n",
-    "training_files = get_filenames_in_dir(training_folder, keyword='*pdf.json')[0]"
+    "training_files = IO.get_filenames_in_dir(training_folder, keyword='*pdf.json')[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# instantiate the model\n",
@@ -77,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
