Pickled DLFM makam recognition model with tomato Pitchdistribution class (removes morty dependency)

--- a/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
+++ b/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fileoperations.fileoperations import get_filenames_in_dir\n",
+    "import glob\n",
     "import json\n",
     "import os\n",
     "from tomato.audio.pitchdistribution import PitchDistribution\n",
@@ -30,12 +30,12 @@
    "source": [
     "# get the training data with the best performing parameters\n",
     "parameter_str = 'pcd--7_5--15_0'\n",
-    "experiment_folder = '../../../../../experiments/dlfm_makam_recognition/data/features/'\n",
+    "experiment_folder = '../../../../../experiments/makam_recognition_experiments/data/features/'\n",
     "\n",
     "training_folder = os.path.join(experiment_folder, parameter_str)\n",
     "\n",
     "# get the relevant files storing the data points\n",
-    "training_files = get_filenames_in_dir(training_folder, keyword='*pdf.json')[0]"
+    "training_files = glob.glob(training_folder + '/*pdf.json')\n"
    ]
   },
   {
@@ -57,27 +57,27 @@
     "\n",
     "# save to pickle\n",
     "save_file = \"./training_model--%s--%s.pkl\" %(parameter_str, 'dlfm2016')\n",
-    "pickle.dump(model, open(save_file, 'w'))\n"
+    "pickle.dump(model, open(save_file, 'wb'))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
