Fixed matplotlib sizing issue in andio_analysis demo

--- a/demos/audio_analysis_demo.ipynb
+++ b/demos/audio_analysis_demo.ipynb
@@ -3,25 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import os\n",
     "import copy\n",
     "from tomato.audio.audioanalyzer import AudioAnalyzer\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (20, 8)\n"
+    "from matplotlib import pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instantiate\n",
@@ -42,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -88,6 +80,8 @@
     "audio_features = audioAnalyzer.analyze(audio_filename)\n",
     "\n",
     "# plot the features\n",
+    "plt.rcParams['figure.figsize'] = [20, 8]\n",
+    "\n",
     "audioAnalyzer.plot(audio_features)\n",
     "matplotlib.pyplot.show()\n"
    ]
@@ -102,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -164,23 +156,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11+"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
